--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    buildFeatures {
+        mlModelBinding true
+    }
 }
 
 dependencies {
@@ -39,15 +42,18 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:20.0.4'
     implementation 'com.google.firebase:firebase-database:19.7.0'
     implementation 'com.google.firebase:firebase-storage:19.2.2'
+    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0-rc1'
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc1'
     testImplementation 'junit:junit:4.+'
     implementation 'com.squareup.picasso:picasso:2.71828'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.airbnb.android:lottie:3.7.0'
     implementation 'com.github.cazaea:sweet-alert-dialog:1.0.0'
     implementation 'org.jetbrains.kotlin:kotlin-stdlib:1.3.0'
     implementation 'com.android.volley:volley:1.1.1'
-    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.ismaeldivita.chipnavigation:chip-navigation-bar:1.3.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 }
